part3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-deployment # Juste le nom du déploiement 
  namespace: dev 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground 
  template:
    metadata:
      labels:
        app: playground
    spec:
      containers:
      - name: playground-app
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
